--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*GERAL*/
+/*codigo geral*/
 html, body{
     margin: 0px;
     font-family: 'Open Sans', sans-serif;
@@ -7,17 +7,25 @@ html, body{
     margin: 0px;
 }
 
-a, ul{
+a{
     text-decoration: none;
 }
 
-/*TITULOS E AFINS*/
-h3{
+/*sections*/
+h3, h2{
+    /*titulos das sections*/
     font-size: 2rem;
     font-weight: bolder;
     margin: 2% 0rem 2rem 0rem;
     text-align-last: center;
-    
+    color: #ce5e02;
+}
+
+#titulo{
+    padding-top: 20%;
+    color: #ce5e02;
+    font-size: 70px;
+    letter-spacing: -5px;
 }
 
 .conteudo{
@@ -31,13 +39,6 @@ h3{
     border: 0.1rem #97933a solid;
     padding: 0.5rem 1rem;
     border-radius: 0.8rem;
-}
-
-#titulo{
-    padding-top: 20%;
-    color: #ce5e02;
-    font-size: 70px;
-    letter-spacing: -5px;
 }
 
 .justificado{
@@ -68,8 +69,17 @@ h3{
     font-weight: 400;
     letter-spacing: .5px
 }
+.cinco{
+    width: 40%;
+}
+
+.coluna a{
+    font-size: 1rem;
+    color: #d60b0b;
+}
 
 .center{
+    /*h3*/
     text-align: center;
 }
 
@@ -77,12 +87,8 @@ h3{
     margin-top: 6.2vh;
 }
 
-h3{
-    font-size: 2rem;
-    font-weight: bolder;
-}
-
 .cont{
+    /*section 2, 3 e 4*/
     margin-bottom: 15px;
     color: #000000;
     font-size: 16.5px;
@@ -92,6 +98,7 @@ h3{
 }
 
 #inic{
+    /*section 6*/
     margin-bottom: 15px;
     color: #000000;
     font-size: 16.5px;
@@ -100,14 +107,9 @@ h3{
     letter-spacing: .5px
 }
 
-.cinco{
-    width: 40%;
-}
-
-
-/*FUNDO*/
-#Central{
-    background: url("Img/forest-5524525_1920.jpg");
+/*fundo*/
+#capa{
+    background: url("Img/28507.jpg");
     height: 100vh;
     width: 100%;
     background-size: cover;
@@ -126,19 +128,13 @@ hr{
     width: 51px;
 }
 
-/*BARRA DE NAVEGAÇÃO*/
+/*cabeçalho*/
 
 #logo{
     width: 330px;
     position: absolute;
     top: 5px;
     margin-left: 1.3%;
-}
-
-#menu{
-    float: right;
-    margin-right: 5%;
-    list-style: none;
 }
 
 header{
@@ -150,13 +146,20 @@ header{
     z-index: 10;
 }
 
-header li{
+/*menu/navbar*/
+.list-menu{
+    float: right;
+    margin-right: 5%;
+    list-style: none;
+}
+
+header .list-menu li{
     float: left;
     padding: 2rem .8rem;
     font-size: 18px;
 }
 
-header li:hover{
+header .list-menu li:hover{
     background-color: #b34700;
     padding: 1.5rem 1rem 2.5rem 1rem;
     transition: all .4s linear;
@@ -165,9 +168,22 @@ header li:hover{
 header li a{
     color: white
 }
+/*menu responsivo*/
+header #toggle{
+    display: none;
+}
 
-/*RODAPÉ*/
+header label{
+    visibility: hidden;
+}
 
+#menu2{
+    visibility: hidden;
+}
+
+
+
+/*rodape*/
 #rodape a{
     font-size: 1rem;
     color: #99ffbb;
@@ -202,3 +218,107 @@ footer{
 .copyright{
     padding: 0 30%;
 }
+
+/*responsividade*/
+
+@media screen and (max-width: 1024px){
+    /*menus*/
+    #menu{
+        visibility: hidden;
+    }
+    
+    header label{
+        z-index: 1;
+        position: absolute;
+        visibility: visible;
+        margin: 1.5%;
+        text-align: right;
+        cursor: pointer;
+        transition: all .2s linear;
+    }
+
+    #menu2{
+        background-color: #330066;
+        visibility: visible;
+        position: absolute;
+        margin: 5.9rem 0rem;
+        height: 45vh;
+        width: 45vw;
+        left: -45vw;
+    }
+
+    #menu2 a{
+        display: block;
+        text-decoration: none;
+        padding: 7% 5%;
+        color: #deca54;
+        background-color: #330066;
+        border-bottom: 0.1rem #bb8002 solid;
+        opacity: 0;
+        margin-top: 5vh;
+        transition: all .4s linear;
+    }
+
+    #toggle:checked ~ #menu2{
+        transform: translateX(45vw);
+    }
+    #toggle:checked ~ #menu2 a{
+        opacity: 1;
+        margin-top: 0;
+    }
+    #menu2 a:hover{
+        background-color: #26464b;
+        padding: 7% 5% 7% 10%;
+    }
+
+    /*capa*/
+    #capa{
+        height: 85%;
+    }
+
+    /*cabeçalho*/
+    #logodiv{
+        width: 100%;
+        text-align: center;
+        position: relative;
+    }
+
+    #logo{
+        transform: translateX(-50%);
+        margin-left: 0;
+    }
+
+    /*sections*/
+    .coluna, .dois, .quatro, .cinco{
+        display: block;
+        width: 80%;
+        padding: 0;
+        margin: 10px auto;
+        float: none; 
+    }
+
+    .justify{
+        text-align: left;
+    }
+
+    .contato, .copyright{
+        display: flex;
+    }
+
+    /*rodape*/
+    #rodape .contato, .copyright{
+        padding: 2% 3.5%;
+    }
+    #rodape .icone{
+        padding: 0.5rem 1rem 0.5rem 0rem;
+    }
+    
+
+}
+
+
+/*
+    # para chamar ids
+    . para chamar classes
+    clear: both; cancela o efeito das floats
+*/
