--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ footer{
         display: block;
         width: 80%;
         padding: 0;
-        margin: 10px auto;
+        margin: 1rem auto;
         float: none; 
     }
 
